--- a/cv.html
+++ b/cv.html
@@ -57,20 +57,23 @@
 </head>
 <body>
     
+    
     <div class="sidebar">
-        <a href="index.html">Home</a>
-        <a href="bio.html">Bio</a>
-        <a href="cv.html">CV</a>
-        <a href="session.html">Session Work</a>
-        <a href="tuition.html">Tuition</a>
-        <a href="contact.html">Contact</a>
+        <a href="/index.html">Home</a>
+        <a href="/bio.html">Bio</a>
+        <a href="/cv.html">CV</a>
+        <a href="/session.html">Session Work</a>
+        <a href="/tuition.html">Tuition</a>
+        <a href="/contact.html">Contact</a>
         <button class="expand-button" onclick="toggleWorks()">+ Works</button>
         <div id="works-submenu" class="works-submenu">
-            <a href="gut-feelings.html">Gut Feelings</a>
-            <a href="things-fall-between.html">Things Fall Between</a>
-            <a href="spotify.html">Spotify</a>
-            <a href="soundcloud.html">SoundCloud</a>
+            <a href="/works/gut-feelings.html">Gut Feelings</a>
+            <a href="/works/things-fall-between.html">Things Fall Between</a>
+            <a href="/works/spotify.html">Spotify</a>
+            <a href="/works/soundcloud.html">SoundCloud</a>
         </div>
+    </div>
+
     </div>
 
     <div class="content">
