--- a/works/spotify.html
+++ b/works/spotify.html
@@ -1,1 +1,35 @@
-<meta http-equiv="refresh" content="0; url=https://open.spotify.com/artist/6gXUsj05uNhFBePL3R5CPS?si=Wmc35N5kR3KME4XwVfCrmw">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Spotify</title>
+  <link rel="stylesheet" href="/style.css">
+</head>
+<body>
+  <header>
+  <h1><a href="/index.html">Ewan James Knight</a></h1>
+  <nav>
+    <ul>
+      <li><a href="/bio.html">Bio</a></li>
+      <li><a href="/cv.html">CV</a></li>
+      <li><a href="/session.html">Session Work</a></li>
+      <li><a href="/tuition.html">Tuition</a></li>
+      <li><a href="/contact.html">Contact</a></li>
+      <li>
+        <a href="#">Works ▾</a>
+        <ul>
+          <li><a href="/works/gut-feelings.html">Gut Feelings</a></li>
+          <li><a href="/works/things-fall-between.html">Things Fall Between</a></li>
+          <li><a href="/works/spotify.html">Spotify</a></li>
+          <li><a href="/works/soundcloud.html">SoundCloud</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+  <main>
+  <meta http-equiv="refresh" content="0; url=https://open.spotify.com/artist/6gXUsj05uNhFBePL3R5CPS?si=Wmc35N5kR3KME4XwVfCrmw">
+  </main>
+</body>
+</html>
