--- a/index.html
+++ b/index.html
@@ -3,39 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <title>Ewan James Knight</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="homepage">
-  <header>
-  <h1><a href="/index.html">Ewan James Knight</a></h1>
-  <nav>
-    <ul>
-      <li><a href="/bio.html">Bio</a></li>
-      <li><a href="/cv.html">CV</a></li>
-      <li><a href="/session.html">Session Work</a></li>
-      <li><a href="/tuition.html">Tuition</a></li>
-      <li><a href="/contact.html">Contact</a></li>
-      <li>
-        <a href="#">Works ▾</a>
-        <ul>
-          <li><a href="/works/gut-feelings.html">Gut Feelings</a></li>
-          <li><a href="/works/things-fall-between.html">Things Fall Between</a></li>
-          <li><a href="/works/spotify.html">Spotify</a></li>
-          <li><a href="/works/soundcloud.html">SoundCloud</a></li>
-        </ul>
-      </li>
-    </ul>
-  </nav>
-</header>
+<body>
+  <div class="container">
+    <div class="sidebar">
+  <div class="brand"><a href="index.html">ewan james knight</a></div>
+  <ul class="nav">
+    <li><a href="bio.html">bio</a></li>
+    <li><a href="cv.html">cv</a></li>
+    <li><a href="session.html">session work</a></li>
+    <li><a href="tuition.html">tuition</a></li>
+    <li><a href="contact.html">contact</a></li>
+    <li class="has-submenu"><a href="#">works</a>
+      <ul class="submenu">
+        <li><a href="works/gut-feelings.html">gut feelings</a></li>
+        <li><a href="works/things-fall-between.html">things fall between</a></li>
+        <li><a href="works/spotify.html">spotify</a></li>
+        <li><a href="works/soundcloud.html">soundcloud</a></li>
+      </ul>
+    </li>
+  </ul>
+</div>
 
-  <main>
-    <div class="home-hero">
-      <iframe 
-        scrolling="no" 
-        allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/walking-through-a-forest-in-the-alps-and-sitting-by-a-mountain-stream&color=%23ffffff&inverse=false&auto_play=false&show_user=true">
-      </iframe>
+    <main>
+      <img src="homepage_image_resized.jpg" alt="Ewan performing" class="hero-img">
+      <div class="sidebar">
+        <a href="/index.html">Home</a>
+        <a href="/bio.html">Bio</a>
+        <a href="/cv.html">CV</a>
+        <a href="/session.html">Session Work</a>
+        <a href="/tuition.html">Tuition</a>
+        <a href="/contact.html">Contact</a>
+        <button class="expand-button" onclick="toggleWorks()">+ Works</button>
+        <div id="works-submenu" class="works-submenu">
+            <a href="/works/gut-feelings.html">Gut Feelings</a>
+            <a href="/works/things-fall-between.html">Things Fall Between</a>
+            <a href="/works/spotify.html">Spotify</a>
+            <a href="/works/soundcloud.html">SoundCloud</a>
+        </div>
     </div>
-  </main>
+
+    </div>
+
+  <div class="content">
+    <iframe 
+      width="100%" 
+      height="166" 
+      scrolling="no" 
+      frameborder="no" 
+      allow="autoplay"
+      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/walking-through-a-forest-in-the-alps-and-sitting-by-a-mountain-stream&color=%23ffffff&inverse=false&auto_play=false&show_user=true">
+    </iframe>
+  </div>
+  <script>
+    function toggleWorks() {
+      var submenu = document.getElementById("works-submenu");
+      submenu.style.display = submenu.style.display === "block" ? "none" : "block";
+    }
+  </script>
+    </main>
+  </div>
 </body>
 </html>
