--- a/works/things-fall-between.html
+++ b/works/things-fall-between.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Ewan James Knight</title>
   <link rel="stylesheet" href="../style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="container">
@@ -19,14 +20,14 @@
       <ul class="submenu">
         <li><a href="../works/gut-feelings.html">gut feelings</a></li>
         <li><a href="../works/things-fall-between.html">things fall between</a></li>
-        <li><a href="../works/spotify.html">spotify</a></li>
-        <li><a href="../works/soundcloud.html">soundcloud</a></li>
+        <li><a href="https://open.spotify.com/" target="_blank" rel="noopener">spotify</a></li>
+        <li><a href="https://soundcloud.com/brainjjus" target="_blank" rel="noopener">soundcloud</a></li>
       </ul>
     </li>
   </ul>
 </div>
 
-    <main>
+    <main class="content">
       <h1>Things Fall Between</h1>
     <p><em>Things Fall Between</em> is an immersive, long-form ambient performance by Ewan James Knight, originally developed as his MA final project. The piece is structured in six movements, performed with guitar, effects, synthesizers, and electronics.</p>
     <p>Premiered in June 2025, the work explores the sensation of falling — as a metaphor for psychological rupture — and uses layered textures, field recordings, and spatial audio to create an enveloping sound world. A studio version is set for release as a full album later in 2025.</p>
