--- a/works/gut-feelings.html
+++ b/works/gut-feelings.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Ewan James Knight</title>
   <link rel="stylesheet" href="../style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="container">
@@ -19,14 +20,14 @@
       <ul class="submenu">
         <li><a href="../works/gut-feelings.html">gut feelings</a></li>
         <li><a href="../works/things-fall-between.html">things fall between</a></li>
-        <li><a href="../works/spotify.html">spotify</a></li>
-        <li><a href="../works/soundcloud.html">soundcloud</a></li>
+        <li><a href="https://open.spotify.com/" target="_blank" rel="noopener">spotify</a></li>
+        <li><a href="https://soundcloud.com/brainjjus" target="_blank" rel="noopener">soundcloud</a></li>
       </ul>
     </li>
   </ul>
 </div>
 
-    <main>
+    <main class="content">
       <h1>Gut Feelings</h1>
     <p><em>Gut Feelings</em> is a collaborative performance-lecture and sound installation by Ewan James Knight and Nam Joo Huh (as Individual Hotpot). It explores involuntary body sounds, sonic shame, memory, and care through sound, voice, video, sculpture, and text.</p>
     <p>The performance combines improvised ambient sound design and field recordings (by Ewan) with spoken word and visuals (by Nam), unfolding across a shifting landscape of vulnerability and sonic attention. The piece has been performed across the UK and Europe, and exhibited as an installation at BIRCH Gallery as part of the Liverpool Independents Biennial.</p>
