--- a/index.html
+++ b/index.html
@@ -1,35 +1,100 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Ewan James Knight</title>
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Times New Roman', serif;
+      background: url('homepage_image_resized.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+    }
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 200px;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding-top: 20px;
+    }
+    .sidebar a {
+      display: block;
+      padding: 10px 20px;
+      color: white;
+      text-decoration: none;
+    }
+    .sidebar a:hover {
+      background-color: #333;
+    }
+    .expand-button {
+      cursor: pointer;
+      padding: 10px 20px;
+      display: block;
+      color: white;
+      background-color: black;
+      border: none;
+      width: 100%;
+      text-align: left;
+    }
+    .expand-button:hover {
+      background-color: #333;
+    }
+    .works-submenu {
+      display: none;
+      margin-left: 10px;
+    }
+    .content {
+      margin-left: 200px;
+      padding: 20px;
+    }
+    iframe {
+      margin-top: 30px;
+      width: 100%;
+      max-width: 600px;
+      height: 120px;
+    }
+  </style>
 </head>
-<body class="homepage">
-  <div class="container">
+<body>
+  
+    
     <div class="sidebar">
-  <div class="brand"><a href="index.html">ewan james knight</a></div>
-  <ul class="nav">
-    <li><a href="bio.html">bio</a></li>
-    <li><a href="cv.html">cv</a></li>
-    <li><a href="session.html">session work</a></li>
-    <li><a href="tuition.html">tuition</a></li>
-    <li><a href="contact.html">contact</a></li>
-    <li class="has-submenu"><a href="#">works</a>
-      <ul class="submenu">
-        <li><a href="works/gut-feelings.html">gut feelings</a></li>
-        <li><a href="works/things-fall-between.html">things fall between</a></li>
-        <li><a href="https://open.spotify.com/" target="_blank" rel="noopener">spotify</a></li>
-        <li><a href="https://soundcloud.com/brainjjus" target="_blank" rel="noopener">soundcloud</a></li>
-      </ul>
-    </li>
-  </ul>
-</div>
+        <a href="/index.html">Home</a>
+        <a href="/bio.html">Bio</a>
+        <a href="/cv.html">CV</a>
+        <a href="/session.html">Session Work</a>
+        <a href="/tuition.html">Tuition</a>
+        <a href="/contact.html">Contact</a>
+        <button class="expand-button" onclick="toggleWorks()">+ Works</button>
+        <div id="works-submenu" class="works-submenu">
+            <a href="/works/gut-feelings.html">Gut Feelings</a>
+            <a href="/works/things-fall-between.html">Things Fall Between</a>
+            <a href="/works/spotify.html">Spotify</a>
+            <a href="/works/soundcloud.html">SoundCloud</a>
+        </div>
+    </div>
 
-    <main class="content">
-      <!-- homepage is visual only -->
-    </main>
+    </div>
+
+  <div class="content">
+    <iframe 
+      width="100%" 
+      height="166" 
+      scrolling="no" 
+      frameborder="no" 
+      allow="autoplay"
+      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/walking-through-a-forest-in-the-alps-and-sitting-by-a-mountain-stream&color=%23ffffff&inverse=false&auto_play=false&show_user=true">
+    </iframe>
   </div>
+  <script>
+    function toggleWorks() {
+      var submenu = document.getElementById("works-submenu");
+      submenu.style.display = submenu.style.display === "block" ? "none" : "block";
+    }
+  </script>
 </body>
 </html>
