--- a/works/gut-feelings.html
+++ b/works/gut-feelings.html
@@ -1,34 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Ewan James Knight</title>
-  <link rel="stylesheet" href="../style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Gut Feelings – Ewan James Knight</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="sidebar">
-  <div class="brand"><a href="../index.html">ewan james knight</a></div>
-  <ul class="nav">
-    <li><a href="../bio.html">bio</a></li>
-    <li><a href="../cv.html">cv</a></li>
-    <li><a href="../session.html">session work</a></li>
-    <li><a href="../tuition.html">tuition</a></li>
-    <li><a href="../contact.html">contact</a></li>
-    <li class="has-submenu"><a href="../#">works</a>
-      <ul class="submenu">
-        <li><a href="../works/gut-feelings.html">gut feelings</a></li>
-        <li><a href="../works/things-fall-between.html">things fall between</a></li>
-        <li><a href="https://open.spotify.com/" target="_blank" rel="noopener">spotify</a></li>
-        <li><a href="https://soundcloud.com/brainjjus" target="_blank" rel="noopener">soundcloud</a></li>
-      </ul>
-    </li>
-  </ul>
-</div>
-
-    <main class="content">
-      <h1>Gut Feelings</h1>
+    <h1>Gut Feelings</h1>
     <p><em>Gut Feelings</em> is a collaborative performance-lecture and sound installation by Ewan James Knight and Nam Joo Huh (as Individual Hotpot). It explores involuntary body sounds, sonic shame, memory, and care through sound, voice, video, sculpture, and text.</p>
     <p>The performance combines improvised ambient sound design and field recordings (by Ewan) with spoken word and visuals (by Nam), unfolding across a shifting landscape of vulnerability and sonic attention. The piece has been performed across the UK and Europe, and exhibited as an installation at BIRCH Gallery as part of the Liverpool Independents Biennial.</p>
     <p>Contributors to the exhibition included Nam Joo Huh, Lara Jennings, and Ryu Kim.</p>
@@ -36,7 +15,5 @@
         src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/concerto-for-digestive-respitory-and-cardivascular-systems&color=%23ffffff&auto_play=false&show_comments=false">
     </iframe>
     <p><a href="https://drive.google.com/file/d/1B8BrNSx86j8V_6VsVm1m8YG1NNt8Xmxi/view?usp=drive_link" target="_blank">Watch video documentation</a></p>
-    </main>
-  </div>
 </body>
 </html>
