--- a/works/things-fall-between.html
+++ b/works/things-fall-between.html
@@ -1,41 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Ewan James Knight</title>
-  <link rel="stylesheet" href="../style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Things Fall Between – Ewan James Knight</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="sidebar">
-  <div class="brand"><a href="../index.html">ewan james knight</a></div>
-  <ul class="nav">
-    <li><a href="../bio.html">bio</a></li>
-    <li><a href="../cv.html">cv</a></li>
-    <li><a href="../session.html">session work</a></li>
-    <li><a href="../tuition.html">tuition</a></li>
-    <li><a href="../contact.html">contact</a></li>
-    <li class="has-submenu"><a href="../#">works</a>
-      <ul class="submenu">
-        <li><a href="../works/gut-feelings.html">gut feelings</a></li>
-        <li><a href="../works/things-fall-between.html">things fall between</a></li>
-        <li><a href="https://open.spotify.com/" target="_blank" rel="noopener">spotify</a></li>
-        <li><a href="https://soundcloud.com/brainjjus" target="_blank" rel="noopener">soundcloud</a></li>
-      </ul>
-    </li>
-  </ul>
-</div>
-
-    <main class="content">
-      <h1>Things Fall Between</h1>
+    <h1>Things Fall Between</h1>
     <p><em>Things Fall Between</em> is an immersive, long-form ambient performance by Ewan James Knight, originally developed as his MA final project. The piece is structured in six movements, performed with guitar, effects, synthesizers, and electronics.</p>
     <p>Premiered in June 2025, the work explores the sensation of falling — as a metaphor for psychological rupture — and uses layered textures, field recordings, and spatial audio to create an enveloping sound world. A studio version is set for release as a full album later in 2025.</p>
     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
         src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/brainjjus/sets/things-fall-between-live-performance-version&color=%23ffffff&auto_play=false&show_comments=false">
     </iframe>
     <p><a href="https://youtu.be/2QHkLvJuYXg" target="_blank">Watch the live video performance</a></p>
-    </main>
-  </div>
 </body>
 </html>
